2.2.0 (2006-02-12)
==================

Features
--------
 - Twisted no longer works with Python 2.2
 - FTP server supports more clients
 - Process support on Windows
 - twisted.internet.stdio improved (including Windows support!)
 - Trial:
   - Continued Trial refactoring
   - Default trial reporter is verbose black&white when color isn't supported
   - Deferreds returned in trial tests that don't fire before the
     unittest timeout now have their errback fired with a TimeoutError
   - raising SkipTest in setUp and setUpClass skips tests
   - Test suites are failed if there are import errors

Fixes
-----
 - iocpreactor fixes
 - Threadpool fixes
 - Fixed infinite loops in datagramReceived edge cases
 - Issues resolved: 654, 773, 998, 1005, 1008, 1116, 1123, 1198, 1221,
   1232, 1233, 1236, 1240, 1244, 1258, 1263, 1265, 1266, 1271, 1275,
   1293, 1294, 1298, 1308, 1316, 1317, 1321, 1341, 1344, 1353, 1359,
   1372, 1374, 1377, 1379, 1380, 1385, 1388, 1389, 1413, 1422, 1426,
   1434, 1435, 1448, 1449, 1456

Deprecations
------------
 - Trial:
   - spinWhile and spinUntil
   - util.wait
   - extract_tb and format_exception
   - util.suppressWarnings
   - runReactor is gone


2.1.0 (2005-11-06)
==================

Features
--------
 - threadedselectreactor, a reactor which potentially makes
   integration with foreign event loops much simpler.
 - major improvements to twisted.conch.insults, including many new widgets.
 - adbapi ConnectionPools now have 'runWithConnection' which is
   similar to runInteraction but gives you a connection object instead of
   a transaction. [975]
 - __file__ is now usable in tac files
 - twisted.cred.pamauth now contains a PAM checker (moved from twisted.conch)
 - twisted.protocols.policies.LimitTotalConnectionsFactory now exists,
   which does as the name suggests
 - twisted.protocols.ident now uses /proc/net/tcp on Linux [233]
 - trial now recurses packages by default (a la the old -R parameter)